<resources>
    <string name="app_name">RecipeAdviser</string>
    <string name="update_list_of_recipes">Update list of recipes</string>
    <string name="show_product_list">Show the product list</string>
    <string name="remove_item">Remove the recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparing_steps">Steps</string>
    <string name="action_settings">Settings</string>
    <string name="action_food_prefs">Food Preferences</string>
    <string name="login">Log in</string>
    <string name="create_new_account">Create new account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="language">Language</string>
    <string name="diet_type">Diet Type</string>
    <string name="low_calorie">Low Calorie</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="liver_disease">Liver Disease</string>
    <string name="vegetarian_key" translatable="false">vegetarian</string>
    <string name="low_calorie_key" translatable="false">low_calorie</string>
    <string name="liver_disease_key" translatable="false">liver_disease</string>
    <string name="add_ingr">Add ingredient</string>
    <string name="name_of_ingr">Name</string>
    <string name="quantity_of_inr">Quantity</string>
    <string name="type_of_inr">Type</string>
    <string name="unit_of_measure">Unit</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>Русский</item>
    </string-array>

</resources>